--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\KhachHang.cs" />
+    <Compile Include="Models\PhieuThuTien.cs" />
     <Compile Include="Models\Sach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
