fix connection string

--- a/WebAPI/WebAPI/Web.config
+++ b/WebAPI/WebAPI/Web.config
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QLNHASACHEntities" connectionString="metadata=res://*/QLNSModel.csdl|res://*/QLNSModel.ssdl|res://*/QLNSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-0JBUKACI\SQLEXPRESS;initial catalog=QLNHASACH;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLNHASACHEntities" connectionString="metadata=res://*/QLNSModel.csdl|res://*/QLNSModel.ssdl|res://*/QLNSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=QLNHASACH;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
