--- a/WebAPI/QLNS.DL/App.Config
+++ b/WebAPI/QLNS.DL/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="QLNHASACHEntities" connectionString="metadata=res://*/QLNSModel.csdl|res://*/QLNSModel.ssdl|res://*/QLNSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-0JBUKACI\SQLEXPRESS;initial catalog=QLNHASACH;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLNHASACHEntities" connectionString="metadata=res://*/QLNSModel.csdl|res://*/QLNSModel.ssdl|res://*/QLNSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=QLNHASACH;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
