api user, login form

--- a/QuanLiNhaSach/QuanLiNhaSach/QuanLiNhaSach.csproj
+++ b/QuanLiNhaSach/QuanLiNhaSach/QuanLiNhaSach.csproj
@@ -107,6 +107,7 @@
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Sach.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmLapBaoCao.resx">
