--- a/WebAPI/QLNS.BL/QLNS.BL.csproj
+++ b/WebAPI/QLNS.BL/QLNS.BL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="PhieuThuTienBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachBL.cs" />
+    <Compile Include="UserBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLNS.DL\QLNS.DL.csproj">
