--- a/QuanLiNhaSach/QuanLiNhaSach/QuanLiNhaSach.csproj
+++ b/QuanLiNhaSach/QuanLiNhaSach/QuanLiNhaSach.csproj
@@ -106,6 +106,8 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\KhachHang.cs" />
+    <Compile Include="Models\PhieuThuTien.cs" />
     <Compile Include="Models\Sach.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
