--- a/WebAPI/QLNS.BL/QLNS.BL.csproj
+++ b/WebAPI/QLNS.BL/QLNS.BL.csproj
@@ -48,7 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HoaDonBL.cs" />
     <Compile Include="KhachHangBL.cs" />
+    <Compile Include="PhieuNhapBL.cs" />
     <Compile Include="PhieuThuTienBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachBL.cs" />
