--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -173,7 +173,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\HoaDon.cs" />
     <Compile Include="Models\KhachHang.cs" />
+    <Compile Include="Models\PhieuNhapSach.cs" />
     <Compile Include="Models\PhieuThuTien.cs" />
     <Compile Include="Models\Sach.cs" />
     <Compile Include="Models\User.cs" />
