procedure phieunhap, trigger...

--- a/WebAPI/QLNS.DL/QLNS.DL.csproj
+++ b/WebAPI/QLNS.DL/QLNS.DL.csproj
@@ -126,6 +126,9 @@
     <Compile Include="sysdiagram.cs">
       <DependentUpon>QLNSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ThamSo.cs">
+      <DependentUpon>QLNSModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>QLNSModel.tt</DependentUpon>
     </Compile>
